fuentes y degradados de fuentes

--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-li {
-    color: blue;
-    font-size: 15px;
-}
+h2 {
+    font-family: verdana;
+    }
+
+h3 {
+        font-family: 'Roboto', sans-serif;
+    }
+
+    a {
+        font-family: 'Gemunu Libre', sans-serif;
+    }
+
+
