cambiar tamaño de las imagenes

--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
-h2 {
-    font-family: verdana;
-    }
-
-h3 {
-        font-family: 'Roboto', sans-serif;
-    }
-
-    a {
-        font-family: 'Gemunu Libre', sans-serif;
-    }
+.imagen-de-gato {
+    width: 200px;
+}
 
 
