Añade bordes alrededor de un elemento

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .imagen-de-gato {
     width: 200px;
+    border-width: 10px;
+    border-color: blue;
+    border-style: solid dashed dotted double;
 }
 
 
