Imagenes y bordes redondeados

--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-.imagen-de-gato {
-    width: 200px;
-    border-width: 10px;
-    border-color: blue;
-    border-style: solid dashed dotted double;
+.bordes-redondeados {
+    border-radius: 20%;
 }
 
 
