--- a/imagen.css
+++ b/imagen.css
@@ -3,9 +3,9 @@ div {
 }
 
 img {
-    padding: 15px;
+    margin: 20px 15px;
     background-color: yellow;
     border-width: 2px;
-    border-color: black;
+    border-color: white;
     border-style: solid;
 }
