--- a/imagen.css
+++ b/imagen.css
@@ -1,11 +1,13 @@
 div {
-    background-color: brown;
+    border-width: 4px;
+    border-color: black;
+    border-style: solid;
 }
 
 img {
-    margin: 20px 15px;
-    background-color: yellow;
-    border-width: 2px;
-    border-color: white;
+    margin: 25px;
+    padding: 25px;
+    border-width: 4px;
+    border-color: black;
     border-style: solid;
 }
