prioriza un estilo sobre otro

--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-img[alt] {
-    border-radius: 50%;
-}
-
-[type="radio"] {
-    margin: px;
-}
-
-input[type="checkbox"] {
-    margin: 8px;
-}
-
-a[href="https://www.freecodecamp.org/espanol/"] {
-    color: green;
-    text-decoration: none;
-    font-weight: bold;
+body {
+    color: chocolate;
 }
