--- a/unidades.css
+++ b/unidades.css
@@ -1,28 +1,7 @@
-#contenedor-principal {
-    color: white;
-    padding: 5px;
-    font-size: 15px;
-    background-color: yellow;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.sin-subrrayado {
+    text-decoration: none;
 }
 
-.rectangulo {
-    padding: 5px;
-    margin: 5px;
-}
-
-.px {
-    background-color: crimson;
-    width: 200px;
-}
-
-.vw {
-    background-color: darkmagenta;
-    width: 20vw;
-}
-
-.em {
-    background-color: green;
-    width: 15em;
-    font-size: 1.5em;
+a {
+    text-decoration: purple underline;
 }
